--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,7 +2,6 @@ name: Generate Pac-Man Game
 
 on:
   schedule:
-    # Run at midnight every day
     - cron: "0 0 * * *"
   workflow_dispatch:
 
@@ -18,12 +17,11 @@ jobs:
         uses: abozanona/pacman-contribution-graph@main
         with:
           github_user_name: ${{ github.repository_owner }}
-          # The action no longer supports 'output_dir'
 
-      - name: Commit and Push Changes
-        run: |
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git config --global user.name "github-actions[bot]"
-          git add pacman-contribution-graph.svg
-          git commit -m "Update Pac-Man contribution graph" || echo "No changes to commit"
-          git push
+      - name: Deploy to output branch
+        uses: crazy-max/ghaction-github-pages@v3
+        with:
+          target_branch: output
+          build_dir: .
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
