--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,6 +1,3 @@
-# This is a simpler and more reliable workflow.
-# It uses a single action to both generate the SVG and commit it to the main branch.
-
 name: Generate Pac-Man Game
 
 on:
@@ -14,13 +11,17 @@ jobs:
     permissions:
       contents: write
     steps:
-      # Step 1: Check out the repository
       - uses: actions/checkout@v3
 
-      # Step 2: Generate and commit the SVG file
       - name: Generate Pac-Man Contribution Graph
         uses: abozanona/pacman-contribution-graph@main
         with:
           github_user_name: ${{ github.repository_owner }}
-          output_file: pacman-contribution-graph.svg
-          enable_commit: true
+
+      - name: Commit and Push Changes
+        run: |
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          git add dist/pacman-contribution-graph.svg
+          git commit -m "Update Pac-Man contribution graph" || echo "No changes to commit"
+          git push
