--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Generate Pac-Man Contribution Graph
-        uses: abozanona/pacman-contribution-graph@v3
+        uses: abozanona/pacman-contribution-graph@main
         with:
           github_user_name: ${{ github.repository_owner }}
 
@@ -22,7 +22,7 @@ jobs:
         run: |
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
-          git add dist/pacman-contribution-graph-light.svg
+          git add dist/pacman-contribution-graph.svg
           git add dist/pacman-contribution-graph-dark.svg
           git commit -m "Update Pac-Man contribution graphs" || echo "No changes to commit"
           git push
